hphp/hack/test/typecheck/argument_unpacking/unpack_call1.php.exp
File "unpack_call1.php", line 38, characters 3-13:
Too few arguments (Typing[4104])
  File "unpack_call1.php", line 3, characters 10-10:
  Definition is here
File "unpack_call1.php", line 39, characters 15-16:
Too few arguments (Typing[4104])
  File "unpack_call1.php", line 8, characters 19-29:
  Definition is here
File "unpack_call1.php", line 40, characters 3-20:
Too few arguments (Typing[4104])
  File "unpack_call1.php", line 12, characters 19-19:
  Definition is here
File "unpack_call1.php", line 41, characters 15-16:
Too few arguments (Typing[4104])
  File "unpack_call1.php", line 16, characters 19-29:
  Definition is here
File "unpack_call1.php", line 42, characters 3-20:
Too few arguments (Typing[4104])
  File "unpack_call1.php", line 12, characters 19-19:
  Definition is here
File "unpack_call1.php", line 51, characters 3-23:
Too few arguments (Typing[4104])
  File "unpack_call1.php", line 3, characters 10-10:
  Definition is here
File "unpack_call1.php", line 53, characters 3-15:
Too few arguments (Typing[4104])
  File "unpack_call1.php", line 3, characters 10-10:
  Definition is here
File "unpack_call1.php", line 69, characters 3-13:
Too few arguments (Typing[4104])
  File "unpack_call1.php", line 3, characters 10-10:
  Definition is here
File "unpack_call1.php", line 75, characters 3-13:
Too few arguments (Typing[4104])
  File "unpack_call1.php", line 3, characters 10-10:
  Definition is here
File "unpack_call1.php", line 85, characters 3-26:
Too few arguments (Typing[4104])
  File "unpack_call1.php", line 3, characters 10-10:
  Definition is here
File "unpack_call1.php", line 87, characters 3-15:
Too few arguments (Typing[4104])
  File "unpack_call1.php", line 3, characters 10-10:
  Definition is here
